@@ -35,6 +35,8 @@ Prado::using('System.Web.UI.WebControls.TListControl');
  */
 class TDropDownList extends TListControl implements IPostBackDataHandler, IValidatable
 {
+	private $_dataChanged=false;
+
 	/**
 	 * Adds attributes to renderer.
 	 * @param THtmlWriter the renderer
@@ -74,7 +76,7 @@ class TDropDownList extends TListControl implements IPostBackDataHandler, IValid
 			if($this->getSelectedIndex()!==$index)
 			{
 				$this->setSelectedIndex($index);
-				return true;
+				return $this->_dataChanged=true;
 			}
 		}
 		return false;
@@ -92,6 +94,16 @@ class TDropDownList extends TListControl implements IPostBackDataHandler, IValid
 		if($this->getAutoPostBack() && $this->getCausesValidation())
 			$this->getPage()->validate($this->getValidationGroup());
 		$this->onSelectedIndexChanged(null);
+	}
+
+	/**
+	 * Returns a value indicating whether postback has caused the control data change.
+	 * This method is required by the IPostBackDataHandler interface.
+	 * @return boolean whether postback has caused the control data change. False if the page is not in postback mode.
+	 */
+	public function getDataChanged()
+	{
+		return $this->_dataChanged;
 	}
 
 	/**
