@@ -44,6 +44,7 @@ ENH: Added support to include external application configuration files (Qiang)
 ENH: Added PRADO version info in PRADO-generated directories to avoid upgrading issue (Qiang)
 ENH: Improved exception display with hyperlinked keywords (Qiang)
 ENH: Improved exception display about template syntax error (Qiang)
+CHG: Added getDataChanged() to IPostBackDataHandler (Qiang)
 NEW: TShellApplication (Qiang)
 NEW: TDbCache (Qiang)
 NEW: TDbUserManager and TDbUser (Qiang)
